PROTON-1165: examples/cpp/mt/epoll_container testing wrong error value

The code was incorrectly testing the return value of read()/write() against
EINTR instead of errno.